--- a/4o_bimestre/numeros_con_signo/numeros_con_signo_2.tex
+++ b/4o_bimestre/numeros_con_signo/numeros_con_signo_2.tex
@@ -72,7 +72,7 @@ operaciones que implican n\'umeros positivos y negativos.
 \begin{multicols}{2}
 
 \begin{equation}
-\frac{3}{5}+\frac{2}{3}-3+-6 \frac{1}{2} =
+\frac{3}{5}+\frac{2}{3}-3-6 \frac{1}{2} =
 \end{equation}
 \begin{equation}
 -6+8-3+5+6-4=
