Operaciones con notacion cientifica

--- a/5o_bimestre/op_not_cien/op_not_cien.tex
+++ b/5o_bimestre/op_not_cien/op_not_cien.tex
@@ -1,9 +1,9 @@
 \newcommand{\seccion}{SECUNDARIA INCORPORADA A LA SEG }
-\newcommand{\descripcion}{\sc Operaciones y problemas con \\notaci\'on cient\'ifica}
+\newcommand{\descripcion}{\sc Operaciones con notaci\'on cient\'ifica}
 \newcommand{\grado}{Primero de Secundaria}
 \newcommand{\ciclo}{Ciclo escolar: 2015--2016}
 \newcommand{\papel}{letterpaper} %letterpaper, legalpaper ...
-\newcommand{\fecha}{3 de junio de 2016}
+\newcommand{\fecha}{7 de junio de 2016}
 
 \author{M. en C. Reinaldo Zapata}
 
@@ -73,51 +73,42 @@ operaciones y procedimientos que realices.
 Resuelve las siguientes operaciones usnado notaci\'on cient\'ifica. Escribe el
 resultado final utilizando s\'olo una posici\'on en los enteros.
 \begin{equation}
-1.54 \times 10^{-3} + 1.5 \times 10^{-4} + 0.6  \times 10^{-5} = 
+21.24 \times 10^{-4} + 3.58 \times 10^{-5} + 5.69  \times 10^{-6} = 
 \end{equation} 
 
-\vspace{2.5cm}
+\vspace{3cm}
 \begin{equation}
-109.5 \times 10^{5} - 1.8 \times 10^{6} - 13.84 \times 10^{3} =
-\end{equation}
-
-\vspace{2.5cm}
-\begin{equation}
-1.5 \times 10^{5} - 67.3 \times 10^{6} + 567  \times 10^{4} = 
+149.35 \times 10^{-5} - 21.8 \times 10^{-6} - 13.84 \times 10^{-8} =
 \end{equation}
 
 \newpage
-% \begin{equation}
-% (7.85 \times 10^{15})(2.9 \times 10^{-3}) =
-% \end{equation}
-
-\vspace{2.5cm}
+\vspace{3cm}
 \begin{equation}
-234 \times 10^{-6} \div 1.4 \times 10^{8} =
+12.3 \times 10^{-1} - 6.35 \times 10^{-2} + 567 = 
 \end{equation}
 
-\vspace{2.5cm}
+\vspace{3cm}
 \begin{equation}
-(1.3 \times 10^{4})^{3} = \hfill \textbf{(2 aciertos)}
+(7.85 \times 10^{15})(2.9 \times 10^{-3}) =
+\end{equation}
+
+\vspace{3cm}
+\begin{equation}
+2500 \times 10^{6} \div 2.5 \times 10^{-8} =
+\end{equation}
+
+\vspace{3cm}
+\section*{puntos extra} % (fold)
+\label{sec:puntos_extra}
+
+\begin{equation}
+(2 \times 10^{6})^{5} = 
 \end{equation}
 % section operaciones (end)
+% section puntos_extra (end)
 
-\vspace{2.5cm}
-\section*{Problemas} % (fold)
-\label{sec:problemas}
-Resuelve los siguientes problemas usando notaci\'on cient\'ifica. Escribe el
-resultado final utilizando s\'olo una posici\'on en los enteros.
+\vspace{3cm}
 
-\vspace{3mm}
-La f\'ormula para calcular el volumen de una esfera es $v_{e} = \frac{4}{3} \pi
-r^{3}$. Utilizando esta f\'ormula calcula el volumen de un \'atomo de
-hidr\'ogeno si se tiene que su radio es aproximadamente $5.3 \times
-10^{-11}$\,m. Utiliza $\pi = 3.14$.  \hfill \textbf{(2 aciertos)}
-
-\vspace{4cm}
-Un granjero tiene un terreno rectangular con medidas $b=11.5 \times 10^{4}$\,m y
-$h=9.3 \times 10^{4}$\,m. Calcula el per\'imetro y el \'area de dicho terreno. 
-\hfill \textbf{(2 aciertos)} 
 
 % section problemas (end)
 \end{document}
